--- a/contact.html
+++ b/contact.html
@@ -354,10 +354,10 @@
 
     <div class="relative z-10 max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-20 w-full">
       <div class="max-w-3xl">
-        <h1 class="font-black text-foreground leading-tight mb-6" style="font-size: clamp(2rem, 5vw, 3.5rem);">
+        <h1 class="font-black text-white leading-tight mb-6" style="font-size: clamp(2rem, 5vw, 3.5rem); text-shadow: 0 2px 10px rgba(0,0,0,0.3);">
           Neem <span class="text-primary">contact</span> op
         </h1>
-        <p class="text-foreground/70 leading-relaxed mb-8" style="font-size: clamp(1rem, 1.5vw, 1.25rem);">
+        <p class="text-foreground/90 leading-relaxed mb-8" style="font-size: clamp(1rem, 1.5vw, 1.25rem); text-shadow: 0 1px 5px rgba(0,0,0,0.3);">
           Plan een gratis kennismakingsgesprek en ontdek wat we voor jouw bedrijf kunnen betekenen. Binnen 24 uur reactie, geen verplichtingen.
         </p>
       </div>
