--- a/contact.html
+++ b/contact.html
@@ -352,7 +352,7 @@
               <!-- Form Type -->
               <input type="hidden" name="form_type" value="contact">
               <!-- Honeypot for spam protection -->
-              <input type="text" name="website" style="display:none" tabindex="-1" autocomplete="off">
+              <input type="text" name="_form_verification" style="display:none" tabindex="-1" autocomplete="off">
               
               <!-- Name & Email -->
               <div class="grid md:grid-cols-2 gap-4">
