--- a/plan-intake.html
+++ b/plan-intake.html
@@ -388,7 +388,7 @@
               <!-- Form Type -->
               <input type="hidden" name="form_type" value="intake">
               <!-- Honeypot for spam protection -->
-              <input type="text" name="website" class="hidden" tabindex="-1" autocomplete="off">
+              <input type="text" name="_form_verification" class="hidden" tabindex="-1" autocomplete="off">
               
               <!-- Name & Company -->
               <div class="grid md:grid-cols-2 gap-4">
