code clean-up & performance optimization

--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@
             </button>
         </div>
     </div>
-    <div id="diensten-submenu" class="submenu fixed w-64 clip-path-button p-3 z-[99999] pointer-events-none">
+    <div id="dienstenSubmenu" class="submenu fixed w-64 clip-path-button p-3 z-[99999] pointer-events-none">
       <a href="diensten/website-development.html" class="submenu-item focus-ring flex items-center justify-between clip-path-button px-3 py-2.5 text-sm hover:bg-primary/5 transition-all rounded-md group">
         Website Development 
         <span class="submenu-arrow text-primary transition-transform duration-300 group-hover:translate-x-1">→</span>
