--- a/plan-intake.html
+++ b/plan-intake.html
@@ -619,7 +619,7 @@
     </div>
   </footer>
 
-    <div id="diensten-submenu" class="fixed w-64 clip-path-button border border-black/5 bg-white/95 glass p-2 opacity-0 invisible shadow-xl transition-all duration-300 z-[99999] pointer-events-none">
+    <div id="dienstenSubmenu" class="fixed w-64 clip-path-button border border-black/5 bg-white/95 glass p-2 opacity-0 invisible shadow-xl transition-all duration-300 z-[99999] pointer-events-none">
         <a href="diensten/website-development.html" class="flex items-center justify-between clip-path-button px-3 py-2 text-sm hover:bg-gray-50 hover:scale-105 transition-all">Website Development <span>→</span></a>
         <a href="diensten/e-commerce.html" class="flex items-center justify-between clip-path-button px-3 py-2 text-sm hover:bg-gray-50 hover:scale-105 transition-all">Webshops <span>→</span></a>
         <a href="diensten/saas-development.html" class="flex items-center justify-between clip-path-button px-3 py-2 text-sm hover:bg-gray-50 hover:scale-105 transition-all">Dashboards & Portals <span>→</span></a>
