--- a/over-ons.html
+++ b/over-ons.html
@@ -123,7 +123,7 @@
   </div>
 
   <div class="lg:hidden fixed top-4 left-4 right-4 z-[100]">
-    <div class="mobile-nav-header bg-navy-medium/95 backdrop-blur-md shadow-xl px-6 py-3 flex items-center justify-between">
+    <div class="mobile-nav-header bg-navy-medium/95 shadow-xl px-6 py-3 flex items-center justify-between">
       <a href="index.html" class="flex-1">
         <img src="assets/img/avenix_logo_main.svg" alt="Avenix" class="h-18 w-auto filter brightness-0 invert" />
       </a>
@@ -135,11 +135,11 @@
     </div>
   </div>
 
-  <div id="newMobileMenuOverlay" class="lg:hidden fixed inset-0 bg-black/70 backdrop-blur-sm opacity-0 invisible z-[90]"></div>
+  <div id="newMobileMenuOverlay" class="lg:hidden fixed inset-0 bg-black/70 opacity-0 invisible z-[90]"></div>
   <div id="newMobileMenu" class="lg:hidden fixed inset-0 bg-gradient-to-b from-navy-dark via-navy-dark to-navy-medium translate-y-[-100%] z-[95] overflow-y-auto mobile-menu-scroll">
     <div class="min-h-full flex flex-col">
       <div class="fixed top-4 left-4 right-4 z-[100]">
-        <div class="mobile-nav-header bg-navy-medium/95 backdrop-blur-sm px-6 py-5 flex items-center justify-between border-b border-white/5">
+        <div class="mobile-nav-header bg-navy-medium/95 px-6 py-5 flex items-center justify-between border-b border-white/5">
         <span class="text-white text-xl font-bold tracking-wider">AVENIX</span>
         <button id="closeMobileMenuBtn" type="button" class="w-12 h-12 flex items-center justify-center rounded-sm hover:bg-white/10 transition-all hover:scale-110">
           <svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -179,7 +179,7 @@
             </svg>
           </button>
           <div class="new-dropdown-content max-h-0 overflow-hidden transition-all duration-300">
-            <div class="bg-navy-dark/60 backdrop-blur-sm rounded-lg p-2 space-y-1.5 ml-14">
+            <div class="bg-navy-dark/60 rounded-lg p-2 space-y-1.5 ml-14">
               <a href="diensten/website-development.html" class="flex items-center gap-3 px-4 py-2.5 text-white/80 hover:text-white hover:bg-white/10 rounded-lg transition-all group">
                 <svg class="w-4 h-4 text-white/60 group-hover:text-primary transition-colors" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"/>
@@ -335,8 +335,8 @@
                 <div class="text-foreground/70" style="font-size: clamp(0.75rem, 1vw, 0.875rem);">Ervaring</div>
               </div>
               <div>
-                <div class="font-bold text-primary" style="font-size: clamp(1.5rem, 3vw, 1.875rem);">24/7</div>
-                <div class="text-foreground/70" style="font-size: clamp(0.75rem, 1vw, 0.875rem);">Bereikbaar</div>
+                <div class="font-bold text-primary" style="font-size: clamp(1.5rem, 3vw, 1.875rem);">24u</div>
+                <div class="text-foreground/70" style="font-size: clamp(0.75rem, 1vw, 0.875rem);">Support</div>
               </div>
               <div>
                 <div class="font-bold text-primary" style="font-size: clamp(1.5rem, 3vw, 1.875rem);">100%</div>
@@ -395,7 +395,7 @@
           </p>
           <p class="text-foreground/80 leading-relaxed" style="font-size: clamp(1rem, 1.3vw, 1.125rem);">
             Elk project bouwen we met passie en toewijding. We zijn niet zomaar een webdesign bureau. 
-            Wij willen uw echte digitale partner zijn die u helpt slagen, zowel technisch als op het gebied van marketing.
+            Wij willen jouw echte webdesign bureau zijn die je helpt slagen, zowel technisch als op het gebied van marketing.
           </p>
         </div>
 
@@ -415,7 +415,7 @@
           </p>
           <p class="text-lg text-foreground/80 leading-relaxed">
             We laten u niet in de steek na oplevering. Uw succes is ons succes. We blijven updaten, 
-            ondersteunen en samen met u groeien. Dat is wat een echte digitale partner doet.
+            ondersteunen en samen met je groeien. Dat is wat een echte webdesign bureau doet.
           </p>
           </div>
         </div>
@@ -429,11 +429,11 @@
                 <svg class="w-8 h-8 text-primary flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z"></path>
                 </svg>
-                <h4 class="text-2xl font-bold text-foreground">24/7 Support & Onderhoud</h4>
+                <h4 class="text-2xl font-bold text-foreground">Support binnen 4 uur op werkdagen & Onderhoud</h4>
               </div>
               <p class="text-foreground/80 text-lg leading-relaxed">
-                Na oplevering bent u niet alleen. Wij zorgen voor 24/7 monitoring, 
-                updates en onderhoud. U kunt altijd bij ons terecht.
+                Na oplevering ben je niet alleen. Wij zorgen voor support binnen 4 uur op werkdagen, 
+                updates en onderhoud. Je kunt altijd bij ons terecht.
               </p>
             </div>
             <div class="space-y-4">
@@ -480,11 +480,11 @@
               <svg class="w-6 h-6 text-primary flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z"></path>
               </svg>
-              <h4 class="text-xl font-semibold text-foreground">Digitale partner</h4>
+              <h4 class="text-xl font-semibold text-foreground">Webdesign bureau</h4>
             </div>
             <p class="text-foreground/70 leading-relaxed">
-              Wij worden uw digitale partner. Niet alleen voor de website, maar ook voor 
-              consultancy, strategie en alle digitale vragen die u heeft.
+              Wij worden jouw webdesign bureau. Niet alleen voor de website, maar ook voor 
+              consultancy, strategie en alle digitale vragen die je hebt.
             </p>
           </div>
         </div>
@@ -588,8 +588,8 @@
                 </div>
                     <div class="w-px h-12 bg-navy-light"></div>
                     <div>
-                        <span class="text-3xl font-bold text-primary">24/7</span>
-                        <p class="text-sm mt-1">Bereikbaar</p>
+                        <span class="text-3xl font-bold text-primary">24u</span>
+                        <p class="text-sm mt-1">Support</p>
                     </div>
                     <div class="w-px h-12 bg-navy-light"></div>
                     <div>
@@ -659,7 +659,7 @@
           <div>
               <img src="assets/img/avenix_logo_main.svg" alt="Avenix Software" class="h-44 w-auto hover:scale-105 transition-transform duration-300 filter brightness-0 invert">
               <p class="text-gray-400 mb-4">
-                  Wij zijn een webdesign bureau dat websites, webshops en webapplicaties bouwt voor bedrijven van alle groottes. Van startups tot corporates. Wij worden uw digitale partner.
+                  Wij zijn een webdesign bureau dat websites, webshops en webapplicaties bouwt voor ondernemers en groeiende bedrijven. Wij worden jouw webdesign bureau.
               </p>
           </div>
 
@@ -758,27 +758,6 @@
     }
     document.body.style.overflow = '';
   }
-  
-  // Mobile dropdown toggle
-  document.addEventListener('click', function(e) {
-    const trigger = e.target.closest('.mobile-dropdown-trigger, .premium-dropdown-trigger');
-    if (trigger) {
-      const content = trigger.nextElementSibling;
-      const arrow = trigger.querySelector('.mobile-dropdown-arrow, .premium-dropdown-arrow');
-      
-      if (content && arrow) {
-        const isOpen = content.style.maxHeight && content.style.maxHeight !== '0px';
-        
-        if (isOpen) {
-          content.style.maxHeight = '0px';
-          trigger.classList.remove('dropdown-open');
-        } else {
-          content.style.maxHeight = content.scrollHeight + 'px';
-          trigger.classList.add('dropdown-open');
-        }
-      }
-    }
-  });
 
 </script>
 </body>
